# HiveMind

./: .gitignore  README.md  README_CN.md  pyproject.toml  requirements-server.txt  requirements.txt
adapters/: .gitkeep
data/: .gitkeep
deploy/: deploy.sh  hivemind.service
hivemind/: __init__.py  config.py
hivemind/client/: __init__.py  inference.py  trainer.py  uploader.py
hivemind/models/: __init__.py  base.py  lora.py
hivemind/server/: __init__.py  aggregator.py  app.py  storage.py
hivemind/utils/: __init__.py  data.py
scripts/: chat.py  serve.py  train.py  upload.py
tests/: __init__.py
